[package]
name = "naive_hashmap"
version = "0.1.0"
authors = ["dukeofdisaster <ortizzlejay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.4.2"

[dev-dependencies]
quickcheck = "0.6"
criterion = "0.1"

### Begin Bench specification ###
#[[bench]]
#name = "naive"
#harness = false

### THIS IST TEST 1; cargo afl build --release will work with just this 
### in our cargo
[[bin]]
name = "naive_interpreter"
doc = false

#[[bin]]
#name = "standard"
#doc = false

#[[bin]]
#name = "naive"
#doc = false

#[[bench]]
#name = "specialized"
#harness = false

#[[bin]]
#name = "specialized_interpreter"
#doc = false

#[[bin]]
#name = "specialized"
#doc = false
